exports[`metro-serializer-esbuild > adds sourceMappingURL comment 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res) => function __init() {",
  "    return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/direct.ts",
  "  var direct_exports = {};",
  "  var init_direct = __esm({",
  "    \\"test/__fixtures__/direct.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_direct();",
  "})();",
  "//# sourceMappingURL=.test-output.jsbundle.map",
  ""
]
`;

exports[`metro-serializer-esbuild > preserves template literals 1`] = `
[
  "(() => {",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __commonJS = (cb, mod) => function __require() {",
  "    return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;",
  "  };",
  "",
  "  // test/__fixtures__/templateLiterals.ts",
  "  var require_templateLiterals = __commonJS({",
  "    \\"test/__fixtures__/templateLiterals.ts\\"() {",
  "      console.log\`Hello\`;",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  require_templateLiterals();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > removes unused code (export *) 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res) => function __init() {",
  "    return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/exportAllPublic.ts",
  "  var init_exportAllPublic = __esm({",
  "    \\"test/__fixtures__/exportAllPublic.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/exportAll.ts",
  "  var exportAll_exports = {};",
  "  var init_exportAll = __esm({",
  "    \\"test/__fixtures__/exportAll.ts\\"() {",
  "      \\"use strict\\";",
  "      init_exportAllPublic();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_exportAll();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > removes unused code (import * <- export *) 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res) => function __init() {",
  "    return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/exportAllPublic.ts",
  "  var init_exportAllPublic = __esm({",
  "    \\"test/__fixtures__/exportAllPublic.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/nestedExportAllInternal.ts",
  "  var init_nestedExportAllInternal = __esm({",
  "    \\"test/__fixtures__/nestedExportAllInternal.ts\\"() {",
  "      \\"use strict\\";",
  "      init_exportAllPublic();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/importExportAll.ts",
  "  var importExportAll_exports = {};",
  "  var init_importExportAll = __esm({",
  "    \\"test/__fixtures__/importExportAll.ts\\"() {",
  "      \\"use strict\\";",
  "      init_nestedExportAllInternal();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_importExportAll();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > removes unused code (import *) 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res) => function __init() {",
  "    return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/importAll.ts",
  "  var importAll_exports = {};",
  "  var init_importAll = __esm({",
  "    \\"test/__fixtures__/importAll.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_importAll();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > removes unused code (nested export *) 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res) => function __init() {",
  "    return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/exportAllPublic.ts",
  "  var init_exportAllPublic = __esm({",
  "    \\"test/__fixtures__/exportAllPublic.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/nestedExportAllInternal.ts",
  "  var init_nestedExportAllInternal = __esm({",
  "    \\"test/__fixtures__/nestedExportAllInternal.ts\\"() {",
  "      \\"use strict\\";",
  "      init_exportAllPublic();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/nestedExportAllPublic.ts",
  "  var init_nestedExportAllPublic = __esm({",
  "    \\"test/__fixtures__/nestedExportAllPublic.ts\\"() {",
  "      \\"use strict\\";",
  "      init_nestedExportAllInternal();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/nestedExportAll.ts",
  "  var nestedExportAll_exports = {};",
  "  var init_nestedExportAll = __esm({",
  "    \\"test/__fixtures__/nestedExportAll.ts\\"() {",
  "      \\"use strict\\";",
  "      init_nestedExportAllPublic();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_nestedExportAll();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > removes unused code 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res) => function __init() {",
  "    return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/direct.ts",
  "  var direct_exports = {};",
  "  var init_direct = __esm({",
  "    \\"test/__fixtures__/direct.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_direct();",
  "})();",
  ""
]
`;
